# EasyConf

./: .gitignore  README.md  build_cfg.py  notebook1.ipynb  pyproject.toml  testnote.py  tree.py
config/: base1.yaml  gwcnet_SceneFlowFull_pretrain.yaml
config/data/: data1.yaml  sceneflow_full_moss.yaml
config/data/imgReader/: D1reader.yaml  RgbStereoReader.yaml
config/data/reader/: reader1.yaml
config/model/: gwcnet_base.yaml  model1.yaml  sttr.yaml
config/trainer/: gwcnet_trainer.yaml
examples/: train.py
src/easyconf/: __init__.py  api.py  compose.py  instantiate.py
